# gyrus

./: .gitignore  README.md  config.yaml  pyproject.toml
scripts/: bump_version.py  install_gyrus_linux.sh  show_gyrus_memory.py  uninstall_gyrus_linux.sh
src/gyrus/: main.py
src/gyrus/application/: circle_service.py  services.py  use_cases.py
src/gyrus/domain/: models.py  repository.py  search_logic.py
src/gyrus/infrastructure/adapters/ai/: fastembed_adapter.py
src/gyrus/infrastructure/adapters/storage/: sqlite_adapter.py  sqlite_storage.py
src/gyrus/infrastructure/adapters/system/: clipboard_adapter.py  keyboard_adapter.py  linux_adapter.py  tray_lifecycle_adapter.py
src/gyrus/infrastructure/adapters/ui/: fzf_adapter.py  gnome_app_indicator_adapter.py  rofi_adapter.py  rofi_dmenu_adapter.py  tkinter_adapter.py  tray_adapter.py  twinter_adapter.py
tests/infrastructure/storage/: test_sqlite_adapter.py
