[project]
name = "gyrus"
version = "0.1.1"
description = "Semantic and collective clipboard infrastructure with local-first E2EE circles."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastembed>=0.7.4",
    "numpy>=2.4.0",
    "pynput>=1.8.1",
    "pyperclip>=1.11.0",
]

[project.scripts]
gyrus = "gyrus.main:cli"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.11",
    "taskipy>=1.14.1",
    "pyautogui>=0.9.54"
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
# E: pycodestyle errors, F: Pyflakes, I: isort (imports)
select = ["E", "F", "I", "B"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["gyrus"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.taskipy.tasks]
lint = "uv run ruff check . --fix"
format = "uv run ruff format ."
test = "PYTHONPATH=src uv run pytest"
check = "task lint && task test"
start = "PYTHONPATH=src uv run python -m gyrus.main"
build = "uv build"
publish = "uv publish"
bump-patch = "python scripts/bump_version.py patch"
bump-minor = "python scripts/bump_version.py minor"
bump-major = "python scripts/bump_version.py major"
release = "task check && task bump-patch && git push origin main --tags && task build && task publish"

